# spoofdevoptions

./: CMakeLists.txt  config.json  customize.sh  module.prop  spoof_module.cpp
.github/workflows/: build.yml  main.yml
src/: spoof_module.cpp
